# git-local

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  start.sh  stop.sh
docs/plans/: 2026-01-30-git-local-design.md  2026-01-30-git-local-implementation.md
src/git_local/: __init__.py  config.py  git_scanner.py  main.py
src/git_local/static/: style.css
src/git_local/templates/: base.html  index.html
src/git_local/templates/components/: repo_list.html
tests/: test_git_scanner.py
